feature(#4336): remove old flags + little fix
