# community/go-engines-community/lib/api/alarm/models.go
@@ -208,23 +208,17 @@ type Alarm struct {
 	Parents        *int64          `bson:"parents" json:"parents,omitempty"`
 	MetaAlarmRules []MetaAlarmRule `bson:"meta_alarm_rules" json:"meta_alarm_rules,omitempty"`
 
-	AssignedInstructions             *[]AssignedInstruction `bson:"assigned_instructions,omitempty" json:"assigned_instructions,omitempty"`
-	IsAutoInstructionRunning         *bool                  `bson:"-" json:"is_auto_instruction_running,omitempty"`
-	IsAllAutoInstructionsCompleted   *bool                  `bson:"-" json:"is_all_auto_instructions_completed,omitempty"`
-	IsAutoInstructionFailed          *bool                  `bson:"-" json:"is_auto_instruction_failed,omitempty"`
-	IsManualInstructionRunning       *bool                  `bson:"-" json:"is_manual_instruction_running,omitempty"`
-	IsManualInstructionWaitingResult *bool                  `bson:"-" json:"is_manual_instruction_waiting_result,omitempty"`
+	AssignedInstructions         *[]AssignedInstruction `bson:"assigned_instructions,omitempty" json:"assigned_instructions,omitempty"`
+	InstructionExecutionIcon     int                    `bson:"-" json:"instruction_execution_icon"`
+	RunningManualInstructions    []string               `bson:"-" json:"running_manual_instructions,omitempty"`
+	RunningAutoInstructions      []string               `bson:"-" json:"running_auto_instructions,omitempty"`
+	FailedManualInstructions     []string               `bson:"-" json:"failed_manual_instructions,omitempty"`
+	FailedAutoInstructions       []string               `bson:"-" json:"failed_auto_instructions,omitempty"`
+	SuccessfulManualInstructions []string               `bson:"-" json:"successful_manual_instructions,omitempty"`
+	SuccessfulAutoInstructions   []string               `bson:"-" json:"successful_auto_instructions,omitempty"`
 
 	Links       map[string]interface{} `bson:"-" json:"links,omitempty"`
 	ImpactState int64                  `bson:"impact_state" json:"impact_state"`
-
-	InstructionExecutionIcon     int      `bson:"-" json:"instruction_execution_icon"`
-	RunningManualInstructions    []string `bson:"-" json:"running_manual_instructions,omitempty"`
-	RunningAutoInstructions      []string `bson:"-" json:"running_auto_instructions,omitempty"`
-	FailedManualInstructions     []string `bson:"-" json:"failed_manual_instructions,omitempty"`
-	FailedAutoInstructions       []string `bson:"-" json:"failed_auto_instructions,omitempty"`
-	SuccessfulManualInstructions []string `bson:"-" json:"successful_manual_instructions,omitempty"`
-	SuccessfulAutoInstructions   []string `bson:"-" json:"successful_auto_instructions,omitempty"`
 }
 
 type MetaAlarmRule struct {
