# community/go-engines-community/lib/api/docs/schemas_swagger.yaml
@@ -133,16 +133,6 @@ definitions:
         type: object
       instruction_execution_icon:
         type: integer
-      is_all_auto_instructions_completed:
-        type: boolean
-      is_auto_instruction_failed:
-        type: boolean
-      is_auto_instruction_running:
-        type: boolean
-      is_manual_instruction_running:
-        type: boolean
-      is_manual_instruction_waiting_result:
-        type: boolean
       is_meta_alarm:
         type: boolean
       links:
